[project]
name = "sym-voice-agent"
version = "0.1.0"
description = "LiveKit voice agent for SYM debate and interview features"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents[deepgram,google,silero,turn-detector]~=1.4",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.56.0",
    "langchain-google-genai>=4.2.1",
    "langchain-core>=1.2.6",
    "python-decouple>=3.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
